feat: add header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary: #FED835;
+  --primary: #356bfe;
   --secondary: #304fff;
 
-  --primary-accent: #e5c230;
+  --primary-accent: #214ddf;
   --foreground-accent: #454545;
   --hero-background: #F3F3F5;
 }
